@@ -8,7 +8,11 @@ class ProxyMachine
   MAX_FAST_SHUTDOWN_SECONDS = 10
 
   def self.update_procline
-    $0 = "proxymachine #{VERSION} - #{@@name} #{@@listen} - #{self.count}/#{@@totalcounter} connections"
+    $0 = "proxymachine #{VERSION} - #{@@name} #{@@listen} - #{self.stats} cur/max/tot conns"
+  end
+
+  def self.stats
+    "#{@@counter}/#{@@maxcounter}/#{@@totalcounter}"
   end
 
   def self.count
@@ -18,6 +22,7 @@ class ProxyMachine
   def self.incr
     @@totalcounter += 1
     @@counter += 1
+    @@maxcounter = @@counter if @@counter > @@maxcounter
     self.update_procline
     @@counter
   end
@@ -63,6 +68,7 @@ class ProxyMachine
 
   def self.run(name, host, port)
     @@totalcounter = 0
+    @@maxcounter = 0
     @@counter = 0
     @@name = name
     @@listen = "#{host}:#{port}"
