@@ -2,6 +2,7 @@
   * Minor changes
     * Always log proxy connection
     * Add version and total connection count to procline
+    * Add max connection count to procline
 
 = 0.2.7 / 2009-10-12
   * Minor changes
